<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_5" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="Main" title="Main" id="BYZ-38-t0r" customClass="ViewController" customModule="BullsEye" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gXR-56-MIt">
                                <rect key="frame" x="183.66666666666666" y="353" width="47" height="30"/>
                                <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.80000001190000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="hit me!"/>
                                <connections>
                                    <action selector="checkGuess:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RTS-jO-aBb"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="PcE-cC-Gxg" userLabel="Target Stack View">
                                <rect key="frame" x="20" y="0.0" width="239" height="34"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get close or guess where: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUE-SM-YJz">
                                        <rect key="frame" x="0.0" y="0.0" width="202" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="StC-0K-Yf3">
                                        <rect key="frame" x="207" y="0.0" width="32" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="Lq4-4q-oKO" userLabel="Bottom Stack View">
                                <rect key="frame" x="20" y="674" width="374" height="42"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UGB-Jw-ySg">
                                        <rect key="frame" x="0.0" y="12" width="66" height="30"/>
                                        <state key="normal" title="start over"/>
                                        <connections>
                                            <action selector="startOver:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Q8-gx-sSJ"/>
                                        </connections>
                                    </button>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="JB4-uI-AtS" userLabel="Round Score Stack View">
                                        <rect key="frame" x="112.66666666666666" y="1.3333333333333712" width="115.66666666666666" height="40.666666666666664"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Round: 999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6z-Nr-3pd">
                                                <rect key="frame" x="0.0" y="0.0" width="89.333333333333329" height="20.333333333333332"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 999999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgj-zK-qay">
                                                <rect key="frame" x="0.0" y="20.333333333333258" width="115.66666666666667" height="20.333333333333329"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="uCE-Pf-AzG">
                                        <rect key="frame" x="275" y="11" width="99" height="32"/>
                                        <segments>
                                            <segment title="Slide"/>
                                            <segment title="Type"/>
                                        </segments>
                                        <connections>
                                            <action selector="chooseGameStyle:" destination="BYZ-38-t0r" eventType="valueChanged" id="Fnr-f2-OJq"/>
                                        </connections>
                                    </segmentedControl>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="2d0-cH-3tf"/>
                                </constraints>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="6eT-KL-AbA" userLabel="Slider Stack View">
                                <rect key="frame" x="20" y="68" width="374" height="30"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="  1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sEf-fP-2qv">
                                        <rect key="frame" x="0.0" y="0.0" width="16.333333333333332" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <slider opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="GYV-IT-PkK">
                                        <rect key="frame" x="19.333333333333343" y="0.0" width="323.33333333333326" height="31"/>
                                        <accessibility key="accessibilityConfiguration" label="Main Slider"/>
                                    </slider>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l3O-vb-5Rp">
                                        <rect key="frame" x="345.66666666666669" y="0.0" width="28.333333333333314" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="TLW-aX-PbD"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="gXR-56-MIt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3yY-Br-58v"/>
                            <constraint firstAttribute="trailingMargin" secondItem="Lq4-4q-oKO" secondAttribute="trailing" id="ABU-J7-0OQ"/>
                            <constraint firstItem="gXR-56-MIt" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="B3f-4c-3JB"/>
                            <constraint firstItem="6eT-KL-AbA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="G5x-Ph-64m"/>
                            <constraint firstItem="PcE-cC-Gxg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="LWF-a9-mhg"/>
                            <constraint firstAttribute="trailingMargin" secondItem="6eT-KL-AbA" secondAttribute="trailing" id="VXL-08-Ppe"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Lq4-4q-oKO" secondAttribute="bottom" constant="20" id="eIk-pB-cQk"/>
                            <constraint firstItem="6eT-KL-AbA" firstAttribute="top" secondItem="PcE-cC-Gxg" secondAttribute="bottom" constant="34" id="f86-Al-b94"/>
                            <constraint firstItem="Lq4-4q-oKO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="w2o-Oh-S9Z"/>
                            <constraint firstItem="PcE-cC-Gxg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="zyU-ib-kW1"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="roundLabel" destination="A6z-Nr-3pd" id="ROa-dU-7mm"/>
                        <outlet property="scoreLabel" destination="lgj-zK-qay" id="rE4-CT-RIZ"/>
                        <outlet property="segmentedControl" destination="uCE-Pf-AzG" id="cXk-om-Ddc"/>
                        <outlet property="slider" destination="GYV-IT-PkK" id="egs-qx-1tn"/>
                        <outlet property="targetGuessField" destination="StC-0K-Yf3" id="NVy-NV-Omj"/>
                        <outlet property="targetGuessLabel" destination="VUE-SM-YJz" id="ZbE-Yh-jPI"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-62" y="182"/>
        </scene>
    </scenes>
</document>
